<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/exLicenceTextEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Licence Plate"
        android:textSize="22sp"
        android:textColor="@color/colorPrimary"
        android:layout_marginStart="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/exStateSelector"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_marginStart="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/exLicenceTextEdit"
        android:prompt="@string/state_or_prov_string"
        android:spinnerMode="dialog"/>

    <Spinner
        android:id="@+id/exInfractionSelector"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/exStateSelector"
        android:prompt="@string/infraction_string"
        android:layout_marginTop="10dp"
        android:layout_marginStart="5dp"
        android:spinnerMode="dialog"/>

    <Spinner
        android:id="@+id/exLocationSelector"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_marginStart="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/exInfractionSelector"
        android:prompt="@string/location_string"
        android:layout_marginTop="10dp"
        android:spinnerMode="dialog"/>

    <EditText
        android:id="@+id/exNotesTextEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Notes (explain exception)"
        app:layout_constraintTop_toBottomOf="@id/exLocationSelector"
        android:textSize="16sp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent" />


    <LinearLayout
        android:id="@+id/exButtonLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/exNotesTextEdit">

        <Button
            android:id="@+id/exLicencePhotoLabel"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:text="Capture Vehicle"
            android:padding="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="5dp"
            android:textColor="#fff"
            android:background="@color/colorPrimary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/exNotesTextEdit"
            />


    </LinearLayout>




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/exButtonLinearLayout">

        <ImageView
            android:id="@+id/exLicencePhotoImageView"
            android:layout_width="160dp"
            android:layout_height="180dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/exLicencePhotoLabel" />


    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent">


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/exDoneButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_margin="16dp"
            android:clickable="true"
            app:borderWidth="0dp"
            android:backgroundTint="@color/colorBlue"
            android:elevation="8dp"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_check_24px" />

        <TextView
            android:id="@+id/exDateTimeLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Date/Time: "
            android:layout_marginStart="16dp"
            android:layout_marginBottom="32dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/exDateTimeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="DateTime"
            android:layout_marginStart="5dp"
            android:layout_marginBottom="32dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/exDateTimeLabel" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>


