<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/selectedLicenceTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Licence Plate"
        android:textColor="@color/colorPrimary"
        android:textSize="22sp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/selectedStateSelector"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/selectedLicenceTextView"
        android:hint="@string/state_or_prov_string" />

    <TextView
        android:id="@+id/selectedInfractionSelector"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/selectedStateSelector"
        android:hint="@string/infraction_string" />

    <TextView
        android:id="@+id/selectedLocationSelector"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/selectedInfractionSelector"
        android:hint="@string/location_string" />

    <TextView
        android:id="@+id/selectedNotesTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Notes (optional)"
        app:layout_constraintTop_toBottomOf="@id/selectedLocationSelector"
        android:textSize="16sp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/selectedTowedTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        app:layout_constraintStart_toStartOf="parent"
        android:text="Vehicle towed?"
        android:layout_marginTop="10dp"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/selectedNotesTextView" />


    <CheckBox
        android:id="@+id/selectedTowedSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/selectedNotesTextView"
        android:layout_marginStart="130dp"
        android:layout_marginTop="7dp"
        app:layout_constraintStart_toStartOf="@id/selectedTowedTextView"
        android:enabled="false"
        />


    <ImageView
        android:id="@+id/selectedLicencePhotoImageView"
        android:layout_width="160dp"
        android:layout_height="180dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selectedTowedTextView" />

    <ImageView
        android:id="@+id/selectedTicketPhotoImageView"
        android:layout_width="160dp"
        android:layout_height="180dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/selectedTowedTextView"
        app:layout_constraintLeft_toRightOf="@id/selectedLicencePhotoImageView" />


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/backTicketButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="16dp"
        android:clickable="true"
        android:elevation="8dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_arrow_back_24px" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/editTicketButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="16dp"
        android:clickable="true"
        android:elevation="8dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/deleteTicketButton"
        app:srcCompat="@drawable/ic_edit_24px" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/deleteTicketButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="16dp"
        android:clickable="true"
        android:elevation="8dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/backTicketButton"
        app:srcCompat="@drawable/ic_delete_24px" />

    <TextView
        android:id="@+id/selectedDateTimeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="32dp"
        android:text="Date/Time: "
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selectedLicencePhotoImageView" />

    <TextView
        android:id="@+id/selectedDateTimeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="32dp"
        android:layout_marginTop="10dp"
        android:text="DateTime"
        app:layout_constraintStart_toEndOf="@id/selectedDateTimeLabel"
        app:layout_constraintTop_toBottomOf="@+id/selectedLicencePhotoImageView" />

</androidx.constraintlayout.widget.ConstraintLayout>